[gd_scene load_steps=8 format=3 uid="uid://bqxvhqxqxqxqx"]

[ext_resource type="Script" path="res://GameManager.gd" id="1"]
[ext_resource type="Script" path="res://HexGrid.gd" id="2"]
[ext_resource type="Script" path="res://TileManager.gd" id="3"]
[ext_resource type="Script" path="res://ItemSystem.gd" id="4"]
[ext_resource type="Script" path="res://CentralReceiver.gd" id="5"]
[ext_resource type="Script" path="res://UIManager.gd" id="6"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.2, 0.3, 0.4, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)

[node name="HexGrid" type="Node2D" parent="."]
script = ExtResource("2")
hex_size = 40.0
grid_radius = 10
show_grid_lines = true

[node name="TileManager" type="Node" parent="."]
script = ExtResource("3")

[node name="ItemSystem" type="Node" parent="."]
script = ExtResource("4")

[node name="UIManager" type="Node" parent="."]
script = ExtResource("6")

[node name="CentralReceiver" type="Node2D" parent="HexGrid"]
script = ExtResource("5")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopPanel" type="Panel" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0

[node name="ScoreLabel" type="Label" parent="UI/HUD/TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -11.5
offset_right = 200.0
offset_bottom = 11.5
text = "Score: 0"

[node name="LevelLabel" type="Label" parent="UI/HUD/TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 220.0
offset_top = -11.5
offset_right = 400.0
offset_bottom = 11.5
text = "Level: 1"

[node name="ItemsLabel" type="Label" parent="UI/HUD/TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 420.0
offset_top = -11.5
offset_right = 600.0
offset_bottom = 11.5
text = "Items Delivered: 0"

[node name="SidePanel" type="Panel" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -200.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/SidePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TileLabel" type="Label" parent="UI/HUD/SidePanel/VBoxContainer"]
layout_mode = 2
text = "Available Tiles:"

[node name="ProducerButton" type="Button" parent="UI/HUD/SidePanel/VBoxContainer"]
layout_mode = 2
text = "Producer (3)"

[node name="TransformerButton" type="Button" parent="UI/HUD/SidePanel/VBoxContainer"]
layout_mode = 2
text = "Transformer (1)"

[node name="ConveyorButton" type="Button" parent="UI/HUD/SidePanel/VBoxContainer"]
layout_mode = 2
text = "Conveyor Belt (5)"

[node name="HSeparator" type="HSeparator" parent="UI/HUD/SidePanel/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="UI/HUD/SidePanel/VBoxContainer"]
layout_mode = 2
text = "Requirements:"

[node name="RequirementsLabel" type="Label" parent="UI/HUD/SidePanel/VBoxContainer"]
layout_mode = 2
text = "Basic Item: 10
Wood: 5"
autowrap_mode = 2

[node name="BottomPanel" type="Panel" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0

[node name="HelpLabel" type="Label" parent="UI/HUD/BottomPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -11.5
offset_right = 800.0
offset_bottom = 11.5
text = "Left Click: Place Tile | Right Click: Remove Tile | ESC: Pause"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")